# mjcf-creator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
.github/workflows/: build-and-test.yml
_codeql_build_dir/: Makefile  cmake_install.cmake  compile_commands.json  comprehensive_robot_demo  constructor_demo  demo  generate_samples  multi_urdf_example
_codeql_build_dir/examples/: Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests
docs/: TEMPORARY_FILES.md
examples/: CMakeLists.txt  README_SAMPLES.md  comprehensive_robot_demo.cpp  constructor_demo.cpp  generate_samples.cpp  material_demo.cpp  multi_mjcf_example.cpp  multi_urdf_example.cpp  name_utilities_example.cpp  temporary_files_demo.cpp  unitree_go2_scene.cpp  urdf_with_actuators_demo.cpp
examples/scene_configs/: multi_robot_scene.json  simple_boxes_scene.json  test_scene.json  warehouse_scene.json
examples/urdf_files/: mobile_base.urdf  simple_robot.urdf
output/: double_pendulum.xml  falling_objects.xml  urdf_converted.xml  vehicle.xml
src/: CMakeLists.txt  tmp.hpp
src/ext/: tinyxml2.cpp  tinyxml2.h
src/mjcf/: actuator_elements.cpp  actuator_elements.hpp  asset_elements.cpp  asset_elements.hpp  body_elements.cpp  body_elements.hpp  core_elements.cpp  core_elements.hpp  element.cpp  element.hpp  enums.cpp  enums.hpp  flex_elements.cpp  flex_elements.hpp  mjcf.hpp  mjcf_importer.cpp  mjcf_importer.hpp  sensor_elements.cpp  sensor_elements.hpp  urdf_converter.cpp  urdf_converter.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  doctest.h  metadata.xml  robot_with_collision.urdf  robot_with_mesh.urdf  test_actuator_sensor.cpp  test_asset_elements.cpp  test_body_elements.cpp  test_core_elements.cpp  test_element.cpp  test_flex_elements.cpp  test_integration.cpp  test_main.cpp  test_name_utilities.cpp  test_temporary_files.cpp  test_urdf_conversion.cpp  test_urdf_sensor.cpp  validate_mjcf_files.py
viewer/: .gitignore  README.md  pyproject.toml  view_mjcf_file.py
